--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.3"
+rand_chacha = "0.2"
 libsecp256k1 = "0.5.0"
 hex = "0.4.3"
 sha3 = "0.9.1"
