--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libsecp256k1 = "0.5.0"
-hex = "0.4.3"
-sha3 = "0.9.1"
 simplelog = "0.12.0"
 log = "0.4.17"
 chrono = "0.4.23"
-secp256k1 = "0.25"
-rand = "0.7"
-rand_isaac = "0.2"
+secp256k1 = "0.28.0"
+rand_chacha = "0.3.1"
+hex = "0.4.3"
+sha3 = "0.10.8"
+libsecp256k1 = "0.7.1"
